fix support font color

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -495,7 +495,8 @@ ul.user-menu:after {
 }
 
 /* Support */
-.support {
+.support, 
+a.support {
   color: #ef037d;
   font-weight: 600;
 }
@@ -528,6 +529,7 @@ ul.user-menu:after {
   background-color: #ef037d;
 }
 .support-count {
+  color: #ef037d;
   font-weight: 800;
 }
 .heart-inline {
