Rerender support summary when supporter list changes
- Add a template partial for support summary
- precompile handlebars templates when Django renders them
- handle collection change events in SupportListView
- change the total support count when the support count link is clicked

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -89,7 +89,7 @@
 
   <script src="{{ STATIC_URL }}components/jquery/jquery.js"></script>
   <script src="{{ STATIC_URL }}components/handlebars.js/dist/handlebars.js"></script>
-  {% handlebarsjs '(.*)' register_partials %}
+  {% handlebarsjs '(.*)' precompile register_partials %}
   <script src="{{ STATIC_URL }}components/underscore/underscore-min.js"></script>
   <script src="{{ STATIC_URL }}components/backbone/backbone.js"></script>
   <script src="{{ STATIC_URL }}components/backbone-relational/backbone-relational.js"></script>
