--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -60,7 +60,8 @@
           <li class="user-menu-item">
             <a href="#" class="user-menu-avatar"><img src="{{ user_data.avatar_url }}"></a>
             <ul class="user-menu unstyled-list">
-              <li class="sub-menu-item"><a href="{% url 'logout' %}" class="authentication-link authentication-link-logout">Log out</a></li>
+              <li class="sub-menu-item"><a href="{% url 'logout' %}" class="authentication-link authentication-link-logout">Sign out</a></li>
+              <li class="sub-menu-item"><a href="#" class="">My Visions</a></li>
             </ul>
           </li>
           {% else %}
