style support-login-prompt

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -82,9 +82,9 @@ img {
   height: auto;
 }
 .icon-inline {
-  width: 1.25em;
-  height: auto;
-  vertical-align: text-top;
+  height: 1.5em;
+  width: auto;
+  margin: 0 0.5em -0.25em 0.5em;
 }
 .icon-muted {
   opacity: 0.75;
@@ -143,10 +143,8 @@ img {
   font-size: 1.25em;
   padding: 0.75em 1em 0.5em;
 }
-.btn .icon {
-  height: 1.5em;
-  width: auto;
-  margin: 0 0.5em -0.25em 0.5em;
+.btn-small {
+  font-size: 0.9em;
 }
 
 /* Forms */
@@ -529,6 +527,7 @@ a.support {
   display: block;
   width: 50px;
   position: absolute;
+  z-index: 3;
   top: 56px;
   left: -13px;
   font-size: large;
@@ -552,6 +551,16 @@ a.support {
   width: auto;
   margin-bottom: -0.25em;
   font-size: 1em;
+}
+.support-login-prompt {
+  position: absolute;
+  z-index: 2;
+  top: 48px;
+  left: -10px;
+  background: #fff;
+  padding: 15px 15px 15px 50px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  border-radius: 0 6px 6px 0;
 }
 
 /* Vision Form */
