--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -437,13 +437,14 @@ a.user-link {
 }
 .vision-description {}
 
+/* Vision Footer */
 .vision-footer {
   clear: both;
+  position: relative;
   margin: 20px -10px -20px -50px;
   background-color: #d5d5c6;
   box-shadow: inset 0 3px 3px rgba(0,0,0,0.15);
 }
-
 .category-link,
 .retweet-link,
 .reply-link {
@@ -463,6 +464,16 @@ a.user-link {
 }
 .reply-link {
   border-left: 1px solid #48a5bf;
+}
+.retweet-login-prompt {
+  position: absolute;
+  z-index: 2;
+  top: -15px;
+  left: 0;
+  background: #fff;
+  padding: 15px 15px 15px 15px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  border-radius: 0 6px 6px 0;
 }
 
 /* Conversation */
