stub in FAQ footer

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -8,10 +8,10 @@
 <!--[if (gt IE 9)|!(IE)]><!--> <html dir="ltr" lang="en-US"> <!--<![endif]-->
 
 <head>
-  <title>VisionLouisville</title>
+  <title>VizLou</title>
 
   <meta charset="utf-8">
-  <meta name="description" content="VisionLouisville">
+  <meta name="description" content="VizLou">
   <meta name="author" content="OpenPlans">
 
   <!--  Mobile Viewport Fix -->
