--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -242,6 +242,14 @@ body {
   font-size: small;
   line-height: 1.5;
 }
+.welcome.site-footer {
+  margin-top: 30px;
+  margin-bottom: -20px;
+  box-shadow: none;
+  border-radius: 0 0 5px 5px;
+  font-size: medium;
+  box-shadow: inset 0 3px 3px rgba(0,0,0,0.25);
+}
 
 
 /* =Site Header
