Set the index.html description meta tag

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -11,7 +11,7 @@
   <title>VizLou</title>
 
   <meta charset="utf-8">
-  <meta name="description" content="VizLou">
+  <meta name="description" content="Share your vision. Come together. Change Louisville.">
   <meta name="author" content="OpenPlans">
 
   <!--  Mobile Viewport Fix -->
