Remove the avatar link until we have a place for them to link to.

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -868,7 +868,8 @@ ul.user-list {
 .user-list li {
   display: inline;
 }
-.user-list li a {
+.user-list li a,
+.user-list li .pretend-a {
   float: left;
   width: 10%;
 }
