--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -96,7 +96,7 @@
     var {{NS}} = {{NS}} || {};
     {{NS}}.currentUserData = {{ user_json|safe }};
     {{NS}}.staticURL = '{{ STATIC_URL|safe }}';
-    {{NS}}.loginURL = '{% url "socialauth_begin" backend="twitter" %}'
+    {{NS}}.loginURL = '{% url "socialauth_begin" backend="twitter" %}';
   </script>
 
   {% if debug %}
