fix webkit tap highlight on on-off-switch

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -747,6 +747,12 @@ h6.category-prompt {
   width: 100%;
   top: 0;
 }
+.on-off-switch,
+.on-off-switch-label,
+.on-off-switch-icon,
+.on-off-switch-icon img {
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 
 /* Reply Form */
 .reply-form {
