--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -45,6 +45,11 @@
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ STATIC_URL }}images/apple-touch-icon-72x72-precomposed.png">
   <link rel="apple-touch-icon-precomposed" href="{{ STATIC_URL }}images/apple-touch-icon-precomposed.png">
 
+  <!-- Windows Start Screen Tiles -->
+  <meta name="application-name" content="VizLou.org"/> 
+  <meta name="msapplication-TileColor" content="#ffffff"/> 
+  <meta name="msapplication-TileImage" content="{{ STATIC_URL }}images/splashlogo.png"/>
+
   <!-- Google Web Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Raleway:400,800' rel='stylesheet' type='text/css'>
 
