Check for Google Analytics on the window object

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -137,7 +137,7 @@
    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-42333855-1', 'vizlou.org');
-  ga('send', 'pageview');
+  ga('send', 'event', 'browser', 'arrived');
   </script>
 
   <script src="{{ STATIC_URL }}js/dist/app.min.js"></script>
