Update the vision tweet text
- Add twitter username parsing/linking in text
- Dump twitter config information into the page
  (for calculating URL lengths in the browser)

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -106,6 +106,7 @@
     {{NS}}.currentUserData = {{ user_json|safe }};
     {{NS}}.staticURL = '{{ STATIC_URL|safe }}';
     {{NS}}.loginURL = '{% url "socialauth_begin" backend="twitter" %}';
+    {{NS}}.twitterConf = {{ twitter_config|safe }};
   </script>
 
   {% if debug %}
