Show the welcome message on every page when not signed in and always on the home page - Move the welcome markup to its own template and register it as a partial - Reference the welcome partial from home, item detail, and list templates - Only show on item detail and list if not authenticated - Hide the Read More link when there is no text to link to using css

--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -893,6 +893,7 @@ a.welcome-close-btn {
   line-height: 1.2;
 }
 .welcome-more-link {
+  display: none;
   text-transform: uppercase;
   text-decoration: none;
   font-weight: 600;
@@ -900,6 +901,9 @@ a.welcome-close-btn {
   font-size: 0.8em;
 }
 
+.home .welcome-more-link {
+  display: inline;
+}
 
 /* =User Lists
 -------------------------------------------------------------- */
