--- a/src/visionlouisville/static/css/styles.css
+++ b/src/visionlouisville/static/css/styles.css
@@ -599,6 +599,7 @@ a.user-link {
 }
 .container-moment-media {
   box-shadow: 0 3px 5px rgba(0,0,0,0.5), 0 -1px 0 #fff;
+  background-color: #fff;
 }
 .moment-media {
   display: block;
