Simplify the default title.

--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -8,11 +8,7 @@
 <!--[if (gt IE 9)|!(IE)]><!--> <html dir="ltr" lang="en-US"> <!--<![endif]-->
 
 <head>
-  {% if vision %}
-  <title>@{{ vision.author.username }}'s vision of {{ vision.category }} in Louisville (#VizLou {{ vision.id }})</title>
-  {% else %}
-  <title>VizLou.org | What's your vision for the future of Louisville?</title>
-  {% endif %}
+  <title>#VizLou | What's your vision for the future of Louisville?</title>
 
   <meta charset="utf-8">
   <meta name="description" content="Share your vision. Come together. Change Louisville.">
