--- a/src/visionlouisville/templates/visionlouisville/index.html
+++ b/src/visionlouisville/templates/visionlouisville/index.html
@@ -28,13 +28,13 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@vizlou">
   <meta name="twitter:creator" content="@{{ vision.author.username }}">
-  <meta name="twitter:title" content="{{ vision.title }}">
-  <meta name="twitter:description" content="{{ vision.description }}">
+  <meta name="twitter:title" content="{{ vision.text|truncatechars:50 }}">
+  <meta name="twitter:description" content="{{ vision.text }}">
 
   <!-- Facebook -->
   <meta property="og:site_name" content="VizLou"/>
-  <meta property="og:title" content="{{ vision.title }}"/>
-  <meta property="og:description" content="{{ vision.description }}"/>
+  <meta property="og:title" content="{{ vision.text|truncatechars:50 }}"/>
+  <meta property="og:description" content="{{ vision.text }}"/>
 
   {% endif %}
 
